demo-app/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: branch-location
  namespace: branch-location

spec:
  type: LoadBalancer
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: branch-location

  ports:
    - port: 80
      targetPort: 8080
      name: http
